--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -58,3 +58,7 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
   align-items: center;
 }
 
+#elementoUno {
+  display: flex;
+  align-items: flex-end;
+}
